// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when user looks at another user profile renders correctly 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-spacing-xs-32-25"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-4-70"
  >
    <div
      editPath={false}
      imageUrl={undefined}
      name="foo-name foo-last"
    >
      Avatar
    </div>
    <div
      style={
        Object {
          "marginTop": 30,
        }
      }
    >
      <h1
        className="MuiTypography-root-92 MuiTypography-display1-96"
      >
        foo-name foo-last
      </h1>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-8-74"
  >
    <div
      className="MuiPaper-root-143 MuiPaper-elevation2-147 MuiPaper-rounded-144 MuiCard-root-142"
    >
      <div
        className="MuiCardContent-root-170"
      >
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Website"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Bio"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Organização"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Cargo"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Cidade"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Estado"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="País"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "textDecoration": "none",
            }
          }
          to="/users/4321/messages/new"
        >
          <button
            className="MuiButtonBase-root-132 MuiButton-root-116 MuiButton-raised-122 MuiButton-raisedPrimary-123"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "marginTop": 16,
              }
            }
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-117"
            >
              Enviar mensagem
            </span>
            <span
              className="MuiTouchRipple-root-135"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39"
  >
    <div
      parentId={1234}
      showDestroy={false}
    >
      Album
    </div>
  </div>
</div>
`;

exports[`when user looks at her own profile renders correctly 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-spacing-xs-32-25"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-4-70"
  >
    <div
      editPath="/profile/avatar"
      imageUrl={undefined}
      name="foo-name foo-last"
    >
      Avatar
    </div>
    <div
      style={
        Object {
          "marginTop": 30,
        }
      }
    >
      <h1
        className="MuiTypography-root-92 MuiTypography-display1-96"
      >
        foo-name foo-last
      </h1>
      <div
        style={
          Object {
            "textDecoration": "none",
          }
        }
        to="/profile/edit"
      >
        <button
          className="MuiButtonBase-root-132 MuiButton-root-116 MuiButton-raised-122 MuiButton-raisedPrimary-123"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-117"
          >
            Editar perfil
          </span>
          <span
            className="MuiTouchRipple-root-135"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-8-74"
  >
    <div
      className="MuiPaper-root-143 MuiPaper-elevation2-147 MuiPaper-rounded-144 MuiCard-root-142"
    >
      <div
        className="MuiCardContent-root-170"
      >
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Email"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Website"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Bio"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Organização"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Cargo"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Cidade"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Estado"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="País"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "textDecoration": "none",
            }
          }
          to="/users/1234/messages/new"
        >
          <button
            className="MuiButtonBase-root-132 MuiButton-root-116 MuiButton-raised-122 MuiButton-raisedPrimary-123"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "marginTop": 16,
              }
            }
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-117"
            >
              Enviar mensagem
            </span>
            <span
              className="MuiTouchRipple-root-135"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39"
  >
    <div
      parentId={1234}
      showDestroy={true}
    >
      Album
    </div>
  </div>
</div>
`;
